Backend Survey Submission Validation
Created a new Sequelize model for surveysubmission storage
