# backend/src/routes/index.ts
@@ -11,6 +11,7 @@ import leagueInviteRoutes from './leagues/leagueInviteRoutes';
 import imageRoutes from './image/imageRoutes';
 import leagueSurveyRoutes from './leagues/surveyRoutes';
 import adminRoutes from './admin/index.ts';
+import surveyController from '../controllers/league/survey/surveyController.ts';
 
 router.use('/auth', authRoutes);
 router.use('/league/profile', leagueProfileRoutes);
@@ -18,6 +19,7 @@ router.use('/season/survivors', survivorRoute);
 router.use('/profile', profileLeagueRoutes);
 router.use('/league/invite', leagueInviteRoutes);
 router.use('/league/:leagueId/survey', leagueSurveyRoutes);
+router.post('/league/survey/submit', surveyController.submitSurvey);
 router.use('/image', imageRoutes);
 router.use('/notification', notificationRoutes);
 router.use('/admin', adminRoutes);
