# backend/src/routes/leagues/surveyRoutes.ts
@@ -4,5 +4,6 @@ import surveyController from '../../controllers/league/survey/surveyController';
 const router = express.Router({ mergeParams: true }); // Add mergeParams to access leagueId
 
 router.get('/', surveyController.getSurveyForLeagueMember);
+router.post('/submit', surveyController.submitSurvey);
 
 export default router;
